add cron jobs and fix bugs

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Lottery Results</h1>
+        <h1>Kerala Lottery Results Checker</h1>
     </header>
     <main>
         <section id="latest-results">
@@ -23,7 +23,7 @@
             <h2>Check Tickets</h2>
             <form id="ticket-form">
                 <label for="tickets">Enter your ticket numbers (comma separated):</label>
-                <input type="text" id="tickets" name="tickets" required>
+                <input type="text" id="tickets" name="tickets" placeholder="AB 123456,SS 654321..." required>
                 <button type="submit">Check</button>
             </form>
             <div id="winners-container"></div>
